--- a/Chat-client/src/app/components/login/login.component.css
+++ b/Chat-client/src/app/components/login/login.component.css
@@ -76,6 +76,39 @@
   color: #d32f2f;
   text-align: center;
 }
+.toggle-btn {
+  /* margin-top: 5px; */
+  margin-left: 75px;
+  margin-bottom: 30px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.toggle-btn:hover {
+  background-color: #0056b3;
+}
+
+.login-container {
+  width: 300px;
+  margin: 0 auto;
+}
+
+.error-message {
+  color: red;
+  font-weight: bold;
+}
+
+.register-text {
+  font-size: 16px;
+  color: #333; /* Dark grey text */
+  margin-top: 20px;
+  text-align: center; /* Centers the text horizontally */
+  font-weight: 400; /* Normal font weight */
+}
 
 /* Responsive adjustments */
 @media (max-width: 480px) {
