chat system improvised

--- a/Chat-client/src/app/components/dashboard/dashboard.component.css
+++ b/Chat-client/src/app/components/dashboard/dashboard.component.css
@@ -134,6 +134,7 @@ button[disabled] {
 /* Specific button styling */
 .leave-group-btn {
   background-color: #ffc107;
+  margin-left: 530px;
 }
 
 .leave-group-btn:hover {
